# cpp-schema-registry-client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: ClangTidy.cmake  CompileProtobuf.cmake  Format.cmake  schemaregistryConfig.cmake.in
example/: AvroConsumer.cpp  AvroConsumerEncryption.cpp  AvroProducer.cpp  AvroProducerEncryption.cpp  CMakeLists.txt  JsonConsumer.cpp  JsonConsumerEncryption.cpp  JsonProducer.cpp  JsonProducerEncryption.cpp  ProtobufConsumer.cpp  ProtobufConsumerEncryption.cpp  ProtobufProducer.cpp  ProtobufProducerEncryption.cpp  README.md
example/proto/example/: example.proto
include/SchemaRegistryClient/model/: Config.h  ErrorMessage.h  Helpers.h  Metadata.h  Mode.h  ModeUpdateRequest.h  RegisterSchemaResponse.h  Rule.h  Schema.h  SchemaString.h  ServerClusterId.h  TagSchemaRequest.h
include/SchemaRegistryClient/rest/: ClientConfiguration.h  RestClient.h  RestException.h
include/SchemaRegistryClient/rest/model/: CompatibilityCheckResponse.h
include/schemaregistry/rest/: ClientConfiguration.h  DekRegistryClient.h  DekRegistryTypes.h  IDekRegistryClient.h  ISchemaRegistryClient.h  MockDekRegistryClient.h  MockSchemaRegistryClient.h  RestClient.h  RestException.h  SchemaRegistryClient.h  SchemaStore.h  TtlLruCache.h
include/schemaregistry/rest/model/: CreateDekRequest.h  CreateKekRequest.h  Dek.h  Kek.h  Metadata.h  RegisteredSchema.h  Rule.h  RuleSet.h  Schema.h  SchemaReference.h  ServerConfig.h
include/schemaregistry/rules/cel/: CelExecutor.h  CelFieldExecutor.h  CelRules.h  ExtraFunc.h
include/schemaregistry/rules/encryption/: EncryptionExecutor.h  EncryptionRegistry.h  EncryptionRules.h  FieldEncryptionExecutor.h  KmsDriver.h
include/schemaregistry/rules/jsonata/: JsonataExecutor.h
include/schemaregistry/serdes/: RuleRegistry.h  Serde.h  SerdeConfig.h  SerdeError.h  SerdeTypes.h  WildcardMatcher.h
include/schemaregistry/serdes/avro/: AvroDeserializer.h  AvroSerializer.h  AvroTypes.h  AvroUtils.h
include/schemaregistry/serdes/json/: JsonDeserializer.h  JsonSerializer.h  JsonTypes.h  JsonUtils.h
include/schemaregistry/serdes/protobuf/: ProtobufDeserializer.h  ProtobufSerializer.h  ProtobufTypes.h  ProtobufUtils.h
include/srclient/rest/: ClientConfiguration.h  DekRegistryClient.h  DekRegistryTypes.h  IDekRegistryClient.h  ISchemaRegistryClient.h  MockDekRegistryClient.h  MockSchemaRegistryClient.h  RestClient.h  RestException.h  SchemaRegistryClient.h  SchemaStore.h
include/srclient/rest/model/: CompatibilityCheckResponse.h  Config.h  ConfigUpdateRequest.h  CreateDekRequest.h  CreateKekRequest.h  Dek.h  ErrorMessage.h  ExtendedSchema.h  Helpers.h  Kek.h  Metadata.h  Mode.h  ModeUpdateRequest.h  RegisterSchemaRequest.h  RegisterSchemaResponse.h  RegisteredSchema.h  Rule.h  RuleSet.h  Schema.h  SchemaEntity.h  SchemaReference.h  SchemaRegistryServerVersion.h  SchemaString.h  SchemaTags.h  ServerClusterId.h  ServerConfig.h  SubjectVersion.h  TagSchemaRequest.h
include/srclient/rules/cel/: CelExecutor.h  CelFieldExecutor.h  CelLib.h  CelRules.h  ExtraFunc.h
include/srclient/serdes/: AvroDeserializer.h  AvroSerializer.h  AvroTypes.h  AvroUtils.h  JsonDeserializer.h  JsonSerializer.h  JsonTypes.h  JsonUtils.h  ProtobufDeserializer.h  ProtobufSerializer.h  ProtobufTypes.h  ProtobufUtils.h  RuleRegistry.h  Serde.h  SerdeBase.h  SerdeConfig.h  SerdeError.h  SerdeTypes.h  WildcardMatcher.h
src/model/: CompatibilityCheckResponse.cpp  Config.cpp  ConfigUpdateRequest.cpp  ErrorMessage.cpp  ExtendedSchema.cpp  Helpers.cpp  Metadata.cpp  Mode.cpp  ModeUpdateRequest.cpp  RegisterSchemaRequest.cpp  RegisterSchemaResponse.cpp  Rule.cpp  RuleSet.cpp  Schema.cpp  SchemaEntity.cpp  SchemaReference.cpp  SchemaRegistryServerVersion.cpp  SchemaString.cpp  SchemaTags.cpp  ServerClusterId.cpp  SubjectVersion.cpp  TagSchemaRequest.cpp
src/rest/: ClientConfiguration.cpp  DekRegistryClient.cpp  DekRegistryTypes.cpp  MockDekRegistryClient.cpp  MockSchemaRegistryClient.cpp  RestClient.cpp  RestException.cpp  SchemaRegistryClient.cpp  SchemaStore.cpp
src/rest/model/: CompatibilityCheckResponse.cpp  Config.cpp  ConfigUpdateRequest.cpp  CreateDekRequest.cpp  CreateKekRequest.cpp  Dek.cpp  ErrorMessage.cpp  ExtendedSchema.cpp  Helpers.cpp  Kek.cpp  Metadata.cpp  Mode.cpp  ModeUpdateRequest.cpp  RegisterSchemaRequest.cpp  RegisterSchemaResponse.cpp  RegisteredSchema.cpp  Rule.cpp  RuleSet.cpp  Schema.cpp  SchemaEntity.cpp  SchemaReference.cpp  SchemaRegistryServerVersion.cpp  SchemaString.cpp  SchemaTags.cpp  ServerClusterId.cpp  ServerConfig.cpp  SubjectVersion.cpp  TagSchemaRequest.cpp
src/rules/cel/: CelExecutor.cpp  CelFieldExecutor.cpp  CelLib.cpp  CelRules.cpp  CelUtils.cpp  ExtraFunc.cpp
src/rules/encryption/: EncryptExecutor.cpp  EncryptionExecutor.cpp  EncryptionRegistry.cpp  ExampleKmsDriver.cpp  FieldEncryptionExecutor.cpp  LocalKmsClient.cpp  LocalKmsDriver.cpp
src/rules/jsonata/: JsonataExecutor.cpp
src/serdes/: AvroDeserializer.cpp  AvroSerializer.cpp  AvroTypes.cpp  AvroUtils.cpp  JsonDeserializer.cpp  JsonSerializer.cpp  JsonTypes.cpp  JsonUtils.cpp  ProtobufDeserializer.cpp  ProtobufSerializer.cpp  ProtobufTypes.cpp  ProtobufUtils.cpp  RuleRegistry.cpp  Serde.cpp  SerdeBase.cpp  SerdeConfig.cpp  SerdeError.cpp  SerdeTypes.cpp  WildcardMatcher.cpp
src/serdes/avro/: AvroDeserializer.cpp  AvroSerializer.cpp  AvroTypes.cpp  AvroUtils.cpp
src/serdes/json/: JsonDeserializer.cpp  JsonSerializer.cpp  JsonTypes.cpp  JsonUtils.cpp  JsonValue.cpp
src/serdes/protobuf/: ProtobufDeserializer.cpp  ProtobufSerializer.cpp  ProtobufTypes.cpp  ProtobufUtils.cpp
test/: AvroTest.cpp  CMakeLists.txt  JsonTest.cpp  ProtoTest.cpp  WildcardMatcherTest.cpp  srclient-test  test.cpp
tests/: AvroTest.cpp  AvroTests.cpp  CMakeLists.txt  Tests.cpp  WildcardMatcherTest.cpp  srclient-test
tests/generated_test_proto/test/: dep.pb.cc  dep.pb.h  example.pb.cc  example.pb.h  test.pb.cc  test.pb.h
(+62 files in other folders)
